--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -74,6 +74,7 @@ body {
                     text-decoration: none;
                     color: #c4c4c4;
                     font-size: 12px;
+                    padding-bottom: 3vh;
                     &:hover{
                         color: #fff;
                     }
@@ -109,43 +110,21 @@ body {
     // }
 }
 #mobile-navmenu {
-    position: fixed;
     width: 100%;
     top: 8vh;
     height: 92vh;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
-    transition: all 500ms ease-in-out;
     background-color: rgba(32, 32, 32, 0.81);
-    z-index: 1;
-
-    ul {
-        text-align: right;
-        margin: 0;
-        padding: 0;
-        margin-right: 5vw;
-        font-family: "Krona One", sans-serif;
-        list-style: none;
-        li {
-            padding: 3vh 2vh;
-            width: fit-content;
-            margin-left: auto;
-            cursor: pointer;
-            a {
-                transition: all 200ms ease-in-out;
-                // remove a styling
-                text-decoration: none;
-                color: #000000;
-                font-size: 12px;               
-            }
-        }
+    text-align: right;
+    li{
+        margin-left: auto;
+        padding: 3vh 2vh;
     }
 }
+
 .a-underline{
     width: 0;
     height: 2px;
-    transition: all 400ms ease-in-out;
+    transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .a-underline.show{
@@ -153,10 +132,52 @@ body {
     background-color: rgba(25, 181, 254, 1);
 }
 
+.navmenu{
+    opacity: 100%;
+    transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    position: fixed;
+    z-index: 1;
+    text-align: left;
+    background-color: rgba(32, 32, 32, 0.81);
+    visibility: visible;
+    ul {
+        margin: 0;
+        padding: 0;
+        margin-right: 5vw;
+        font-family: "Krona One", sans-serif;
+        list-style: none;
+        li {
+            padding: 1vh 1vh;
+            width: fit-content;
+            cursor: pointer;
+            a {
+                text-align: left;
+                transition: all 200ms ease-in-out;
+                text-decoration: none;
+                color: #fff;
+                font-size: 12px;               
+            }
+        }
+    }
+}
+
 .navmenu-hidden{
-    display: none;
+    opacity: 0 !important;
+    transform: translateY(30%);
+    visibility: hidden !important;
+}
+
+.navmenu-mobile-hidden{
+    opacity: 0 !important;
+}
+
+.symbolbutton{
     background-color: transparent;
-    transition: all 500ms ease-in-out;
+    border: none;
+}
+
+.symbols{
+    color: #fff;
 }
 
 // mobile devices
