--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,7 @@ body {
   text-decoration: none;
   color: #c4c4c4;
   font-size: 12px;
+  padding-bottom: 3vh;
 }
 #header #navbar ul li a:hover {
   color: #fff;
@@ -104,39 +105,21 @@ body {
 }
 
 #mobile-navmenu {
-  position: fixed;
   width: 100%;
   top: 8vh;
   height: 92vh;
-  transition: all 500ms ease-in-out;
   background-color: rgba(32, 32, 32, 0.81);
-  z-index: 1;
-}
-#mobile-navmenu ul {
   text-align: right;
-  margin: 0;
-  padding: 0;
-  margin-right: 5vw;
-  font-family: "Krona One", sans-serif;
-  list-style: none;
 }
-#mobile-navmenu ul li {
-  padding: 3vh 2vh;
-  width: fit-content;
+#mobile-navmenu li {
   margin-left: auto;
-  cursor: pointer;
-}
-#mobile-navmenu ul li a {
-  transition: all 200ms ease-in-out;
-  text-decoration: none;
-  color: #000000;
-  font-size: 12px;
+  padding: 3vh 2vh;
 }
 
 .a-underline {
   width: 0;
   height: 2px;
-  transition: all 400ms ease-in-out;
+  transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .a-underline.show {
@@ -144,10 +127,52 @@ body {
   background-color: rgb(25, 181, 254);
 }
 
+.navmenu {
+  opacity: 100%;
+  transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  position: fixed;
+  z-index: 1;
+  text-align: left;
+  background-color: rgba(32, 32, 32, 0.81);
+  visibility: visible;
+}
+.navmenu ul {
+  margin: 0;
+  padding: 0;
+  margin-right: 5vw;
+  font-family: "Krona One", sans-serif;
+  list-style: none;
+}
+.navmenu ul li {
+  padding: 1vh 1vh;
+  width: fit-content;
+  cursor: pointer;
+}
+.navmenu ul li a {
+  text-align: left;
+  transition: all 200ms ease-in-out;
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+}
+
 .navmenu-hidden {
-  display: none;
+  opacity: 0 !important;
+  transform: translateY(30%);
+  visibility: hidden !important;
+}
+
+.navmenu-mobile-hidden {
+  opacity: 0 !important;
+}
+
+.symbolbutton {
   background-color: transparent;
-  transition: all 500ms ease-in-out;
+  border: none;
+}
+
+.symbols {
+  color: #fff;
 }
 
 @media only screen and (max-width: 1000px) {
