Added about us tab to header, added footer, unfinished

--- a/components/header.html
+++ b/components/header.html
@@ -4,17 +4,17 @@
     </div>
     <nav id="navbar">
         <ul>
-            <li><a href="#">MEP</a></li>
-            <li><a href="#">BIM</a></li>
-            <li><a href="#" id="lets-scrum-header">LET'S SCRUM</a></li>
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#" id="about-us-header">ABOUT US</a></li>
+            <li><a href="#">MEP</a></li>/
+            <li><a href="#">BIM</a></li>/
+            <li><a href="#" id="lets-scrum-header">LET'S SCRUM</a></li>/
+            <li><a href="#">BLOG</a></li>/
+            <li><a href="#" id="about-us-header">ABOUT US</a></li>/
             <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
     <div id="right-header">
         <a id="language" href="#">🇬🇧</a>
-        <button id="mobile-navmenu-toggle" class="symbolbutton"><span class="material-symbols-outlined symbols">menu</span></button>
+        <button id="mobile-navmenu-toggle" class="symbolbutton"><i class="fa-solid fa-bars"></i></button>
     </div>
 </div>
 <div id="mobile-navmenu" class="navmenu-mobile-hidden navmenu">
@@ -24,6 +24,13 @@
         <li><a href="#">LET'S SCRUM</a><div class="a-underline"></div></li>
         <li><a href="#">BLOG</a><div class="a-underline"></div></li>
         <li><a href="#">ABOUT US</a><div class="a-underline"></div></li>
+        <!-- <li class="mobile-navbar-small"><a href="#">Memberships & Certificates</a><div class="a-underline"></div></li>
+        <li class="mobile-navbar-small"><a href="#">Logo and Name</a><div class="a-underline"></div></li>
+        <li class="mobile-navbar-small"><a href="#">Services</a><div class="a-underline"></div></li>
+        <li class="mobile-navbar-small"><a href="#">Founder</a><div class="a-underline"></div></li>
+        <li class="mobile-navbar-small"><a href="#">Team</a><div class="a-underline"></div></li>
+        <li class="mobile-navbar-small"><a href="#">Careers</a><div class="a-underline"></div></li>
+        <li class="mobile-navbar-small"><a href="#">Imprint</a><div class="a-underline"></div></li> -->
         <li><a href="#">CONTACT</a><div class="a-underline"></div></li>
     </ul></nav>
 </div>
@@ -34,5 +41,17 @@
         <li><a href="#">Construction Industy Acceleration</a><div class="a-underline"></div></li>
         <li><a href="#">Producing 1000 Units per Day</a><div class="a-underline"></div></li>
     </ul></nav>
+</div>
+<div id="about-us-menu" class="navmenu navmenu-hidden">
+    <nav><ul>
+        <li><a href="#">About Us</a><div class="a-underline"></div></li>
+        <li><a href="#">Memberships & Certificates</a><div class="a-underline"></div></li>
+        <li><a href="#">Logo and Name</a><div class="a-underline"></div></li>
+        <li><a href="#">Services</a><div class="a-underline"></div></li>
+        <li><a href="#">Founder</a><div class="a-underline"></div></li>
+        <li><a href="#">Team</a><div class="a-underline"></div></li>
+        <li><a href="#">Careers</a><div class="a-underline"></div></li>
+        <li><a href="#">Imprint</a><div class="a-underline"></div></li>
+    </ul></nav>    
 </div>
 <script src="/scripts/header.js"></script>
