--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,6 +54,7 @@ body {
 #header #navbar {
   width: 50%;
   height: 100%;
+  color: #c4c4c4;
 }
 #header #navbar ul {
   list-style: none;
@@ -110,10 +111,16 @@ body {
   height: 92vh;
   background-color: rgba(32, 32, 32, 0.81);
   text-align: right;
+  visibility: visible;
 }
 #mobile-navmenu li {
   margin-left: auto;
   padding: 3vh 2vh;
+}
+#mobile-navmenu li.mobile-navbar-small {
+  padding: 1vh 2vh;
+  font-size: 0.8em;
+  color: #979797 !important;
 }
 
 .a-underline {
@@ -129,7 +136,7 @@ body {
 
 .navmenu {
   opacity: 100%;
-  transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
   position: fixed;
   z-index: 1;
   text-align: left;
@@ -164,6 +171,66 @@ body {
 
 .navmenu-mobile-hidden {
   opacity: 0 !important;
+  visibility: hidden !important;
+}
+
+#footer .footer-content {
+  background-color: white;
+  color: #000;
+  height: 40vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: top;
+  padding: 7vh 0;
+}
+#footer .footer-content ul {
+  --icon-size: .8em;
+  --gutter: 1em;
+  padding: 0 0 0 var(--icon-size);
+}
+#footer .footer-content ul li {
+  padding: 0.5vh;
+  padding-left: var(--gutter);
+}
+#footer .footer-content ul li a {
+  text-decoration: none;
+  color: #151515;
+  font-size: 0.8em;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+#footer .footer-content ul li a:hover {
+  color: #0693e3;
+}
+#footer .footer-content ul li::marker {
+  content: "\f054"; /* FontAwesome Unicode chevron-right */
+  font-family: FontAwesome;
+  font-size: var(--icon-size);
+}
+#footer .footer-content .about-us .title, #footer .footer-content .navigation .title {
+  font-size: 0.9em;
+  font-weight: 600;
+  margin-bottom: 1vh;
+}
+#footer .footer-content .imprint a {
+  padding: none;
+}
+#footer .footer-content .imprint img {
+  width: 16vw;
+}
+#footer .footer-content .imprint .map-logo::marker {
+  content: "\f3c5";
+}
+#footer .footer-content .imprint .mail-logo::marker {
+  content: "\f0e0";
+}
+#footer .footer-bottom {
+  background-color: rgb(15, 15, 15);
+  color: #fff;
+  text-align: center;
+  padding: 2vh 0;
+  font-size: 0.8em;
 }
 
 .symbolbutton {
@@ -186,9 +253,8 @@ body {
     display: block;
     cursor: pointer;
     margin-right: 2vw;
-  }
-  #header #right-header #mobile-navmenu-toggle img {
-    width: 100%;
-    height: auto;
+    color: #fff;
+    width: 8vh;
+    font-size: 1.5em;
   }
 }/*# sourceMappingURL=styles.css.map */
