--- a/components/footer.html
+++ b/components/footer.html
@@ -28,22 +28,24 @@
             <img src="/images/bimmade.png" alt="Decorative MEP Background" />
         </div>
         <div class="imprint">
-            <ul>
+            <div class="logowrapper">
             <img class="logo" src="/images/simphase-transparentbg-black.png" alt="SIMPHASE Logo" />
-            <li class="map-logo"><a href="#" class="address footer-link"><span>Simphase Engineering GmbH <br/>
+            </div>
+            <ul>
+            <li class="map-logo"><a href="https://www.google.com/maps/place/52%C2%B031'14.5%22N+13%C2%B019'40.0%22E/@52.5205505,13.3277636,16.75z/data=!4m4!3m3!8m2!3d52.5206944!4d13.3277778?hl=de" target="_blank" class="address footer-link"><span>Simphase Engineering GmbH <br/>
                 c/o Next Level Offices, <br/>
                 Franklinstraße 11, <br/>
                 10587 Berlin</span></a></li>
+            <li class="mail-logo"><a href="mailto:info@simphase.eu" target="_blank" class="email footer-link">
+                info@simphase.eu
+            </a></li>
+            </ul>
             <div class="footer social-media">
                 <a href="#" class="sm-icon"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#" class="sm-icon"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="sm-icon"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#" class="sm-icon"><i class="fa-brands fa-xing"></i></a>
             </div>
-            <li class="mail-logo"><a href="#" class="email footer-link">
-                info@simphase.eu
-            </a></li>
-            </ul>
         </div>
     </div>
     <div class="footer-bottom">
