--- a/styles/styles.css
+++ b/styles/styles.css
@@ -175,14 +175,21 @@ body {
 }
 
 #footer .footer-content {
-  background-color: white;
-  color: #000;
-  height: 40vh;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: top;
+  flex-wrap: wrap;
+  background-color: white;
+  color: #000;
+  height: 40vh;
   padding: 7vh 0;
+}
+#footer .footer-content .decorative-image img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
 }
 #footer .footer-content ul {
   --icon-size: .8em;
@@ -213,8 +220,25 @@ body {
   font-weight: 600;
   margin-bottom: 1vh;
 }
+#footer .footer-content .imprint li {
+  padding: 1em;
+}
+#footer .footer-content .imprint .social-media {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 #footer .footer-content .imprint a {
-  padding: none;
+  padding: 0;
+}
+#footer .footer-content .imprint .sm-icon i {
+  font-size: 2em;
+  text-decoration: none;
+  color: #151515;
+  transition: color 0.3s ease;
+}
+#footer .footer-content .imprint .sm-icon i:hover {
+  color: #0693e3;
 }
 #footer .footer-content .imprint img {
   width: 16vw;
@@ -227,7 +251,7 @@ body {
 }
 #footer .footer-bottom {
   background-color: rgb(15, 15, 15);
-  color: #fff;
+  color: #7a7a7a;
   text-align: center;
   padding: 2vh 0;
   font-size: 0.8em;
@@ -256,5 +280,46 @@ body {
     color: #fff;
     width: 8vh;
     font-size: 1.5em;
+  }
+  #footer .footer-content {
+    flex-direction: column;
+    height: auto;
+  }
+  #footer .footer-content ul {
+    width: 50%;
+    margin: 0 auto;
+    padding-left: 0;
+    text-align: center;
+  }
+  #footer .footer-content ul li {
+    padding: 2vh;
+    font-size: 1em;
+  }
+  #footer .footer-content .decorative-image {
+    display: none;
+  }
+  #footer .footer-content .title {
+    text-align: center;
+    display: block;
+    font-size: 1.4em;
+  }
+  #footer .footer-content .imprint {
+    margin-top: 3vh;
+  }
+  #footer .footer-content .imprint .logowrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #footer .footer-content .imprint .logowrapper .logo {
+    width: 90vw;
+    margin: 0 auto;
+  }
+  #footer .footer-content .imprint ul {
+    width: 70vw;
+  }
+  #footer .footer-content .imprint .social-media {
+    margin-top: 2vh;
+    justify-content: space-around;
   }
 }/*# sourceMappingURL=styles.css.map */
