--- a/components/header.html
+++ b/components/header.html
@@ -1,11 +1,11 @@
 <div id="header">
     <div id="left-header">
-        <img src="/images/simphase-transparentbg-white.png" alt="Simphase Logo" />
+        <a href="/index.html" class="logo"><img src="/images/simphase-transparentbg-white.png" alt="Simphase Logo" /></a>
     </div>
     <nav id="navbar">
         <ul>
             <li><a href="#">MEP</a></li>/
-            <li><a href="#">BIM</a></li>/
+            <li><a href="/bim.html">BIM</a></li>/
             <li><a href="#" id="lets-scrum-header">LET'S SCRUM</a></li>/
             <li><a href="#">BLOG</a></li>/
             <li><a href="#" id="about-us-header">ABOUT US</a></li>/
