--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,35 @@ body {
     overflow-x: hidden;
 }
 
+.divider{
+    width: 100%;
+    background-color: rgba(25, 181, 254, 1);
+    margin: 0 auto;
+    height: 2px;
+}
+
+.hidden{
+    display: none;
+}
+
+h1, h2, h3, h4{
+    font-family: "Krona One", sans-serif;
+}
+
+.heading-holder{
+    margin: 10vh auto;
+    margin-bottom: 40vh;
+    text-align: center;
+    width: fit-content;
+    h2{
+        font-size: 3em;
+    }
+    p{
+        font-size: 1.5em;
+        font-weight: 500;
+    }
+}
+
 .page-start{
     height: 100vh;
     width: 100vw;
@@ -20,12 +49,90 @@ body {
         position: absolute;
         width: max(35vw, 30vh);
         background-color: transparent;
-        top: 45%;
+        top: 40%;
         left: 15%;
         img {
             width: 100%;
             height: auto;
             background-color: transparent;
+        }
+        h1{
+            font-family: "Krona One", sans-serif;
+            color: #fff;
+            font-size: 10em;
+            margin: 0;
+        }
+        h2{
+            font-family: "Krona One", sans-serif;
+            color: #fff;
+            font-size: 2em;
+            margin: 0;
+            margin-left: 0.8vw;
+        }
+    }
+}
+
+.video-info-box{
+    margin-top: 10vh;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    .info-box{
+        width: 30%;
+        padding: 2vh 5vw;
+        .big{
+            font-weight: 500;
+            margin: 0;
+            font-size: 2.5em;
+        }
+        .small{
+            margin: 0;
+            margin-top: 1vh;
+            font-size: 1em;
+        }
+    }
+    .video-box{
+        width: fit-content;
+        padding: 2vh 5vw;
+        .yt-vid-holder{
+            width: 660px;
+            height: 371px;
+            background-color: #999;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit:contain;
+            }
+            .play-button{
+                position: relative;
+                top: -50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                transform-origin: center;
+                z-index: 1;
+
+                width: 10vh;
+                height: 10vh;
+                background-color: #fff;
+                border-radius: 50%;
+                border: 1px solid #d1d1d1;
+                i{
+                    font-size: 4vh;
+
+                }
+                transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                &:hover{
+                    background-color: #E0E0E0;
+                    transform: scale(1.1) translate(-45%, -45%);
+                }
+                &:active{
+                    background-color: #E0E0E0;
+                    transform: scale(0.9) translate(-55%, -55%);
+                }
+            }
         }
     }
 }
@@ -45,9 +152,12 @@ body {
         align-items: center;
         width: 25%;
         height: 100%;
-        img{
+        .logo{
             height: 70%;
             padding: 0 2vw;
+            img{
+                height: 100%;
+            }
         }
     }
     #navbar{
@@ -145,7 +255,7 @@ body {
     position: fixed;
     z-index: 1;
     text-align: left;
-    background-color: rgba(32, 32, 32, 0.81);
+    background-color: rgba(32, 32, 32, 0.75);
     visibility: visible;
     ul {
         margin: 0;
@@ -180,6 +290,34 @@ body {
 }
 
 #footer{
+    border-top: 0.5px solid #b9b9b9;
+    #back-to-top{
+        position: relative;
+        left: 50%;
+        top: 1vh;
+        transform: translateX(-50%);
+        width: 5vh;
+        height: 5vh;
+        background-color: #F4F4F4;
+        color: #000;
+        outline: none;
+        border: none;
+        border-radius: 1vh;
+        cursor: pointer;
+        transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        &:hover{
+            background-color: #E0E0E0;
+            transform: scale(1.1) translateX(-45%);
+            i{
+                transform: scale(1.1) translateY(-25%);
+            }
+        }
+        i{
+            transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            font-size: 1.5em;
+            transform: none;
+        }
+    }
     .footer-content{
         display: flex;
         flex-direction: row;
@@ -272,6 +410,7 @@ body {
         font-size: 0.8em;
 
     }
+    
 }
 
 .symbolbutton{
@@ -285,6 +424,51 @@ body {
 
 // mobile devices
 @media only screen and (max-width: 1000px) {
+    .video-info-box{
+        flex-direction: column;
+        .info-box{
+            padding: 2vh 0;
+            text-align: center;
+            width: 100%;
+            .big{
+                margin: 0;
+                padding: 0;
+                font-size: 2em;
+            }
+            .small{
+                margin: 0;
+                padding: 0;
+            }
+        }
+        .video-box{
+            width: 100%;
+            padding: 2vh 0;
+            .yt-vid-holder{
+                aspect-ratio: 660/371;
+                position: relative;
+                width: auto;
+                $height-calc: calc(371 / 660 * 100vw);
+                height: $height-calc;
+                // padding-bottom: $padding-size;
+                box-sizing: border-box;
+                img{
+                    aspect-ratio: 660/371;
+                    width: 100vw;
+                    height: 100% !important;
+                }
+                iframe{
+                    width: 100%;
+                    height: 100%;
+                }
+                .play-button {
+                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    top: 50%;
+                }
+            }
+        }
+    }
+
     .page-start{
         .page-logo {
             left: 5%;
