--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,35 @@ body {
   overflow-x: hidden;
 }
 
+.divider {
+  width: 100%;
+  background-color: rgb(25, 181, 254);
+  margin: 0 auto;
+  height: 2px;
+}
+
+.hidden {
+  display: none;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Krona One", sans-serif;
+}
+
+.heading-holder {
+  margin: 10vh auto;
+  margin-bottom: 40vh;
+  text-align: center;
+  width: fit-content;
+}
+.heading-holder h2 {
+  font-size: 3em;
+}
+.heading-holder p {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
 .page-start {
   height: 100vh;
   width: 100vw;
@@ -21,13 +50,89 @@ body {
   position: absolute;
   width: max(35vw, 30vh);
   background-color: transparent;
-  top: 45%;
+  top: 40%;
   left: 15%;
 }
 .page-start .page-logo img {
   width: 100%;
   height: auto;
   background-color: transparent;
+}
+.page-start .page-logo h1 {
+  font-family: "Krona One", sans-serif;
+  color: #fff;
+  font-size: 10em;
+  margin: 0;
+}
+.page-start .page-logo h2 {
+  font-family: "Krona One", sans-serif;
+  color: #fff;
+  font-size: 2em;
+  margin: 0;
+  margin-left: 0.8vw;
+}
+
+.video-info-box {
+  margin-top: 10vh;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.video-info-box .info-box {
+  width: 30%;
+  padding: 2vh 5vw;
+}
+.video-info-box .info-box .big {
+  font-weight: 500;
+  margin: 0;
+  font-size: 2.5em;
+}
+.video-info-box .info-box .small {
+  margin: 0;
+  margin-top: 1vh;
+  font-size: 1em;
+}
+.video-info-box .video-box {
+  width: fit-content;
+  padding: 2vh 5vw;
+}
+.video-info-box .video-box .yt-vid-holder {
+  width: 660px;
+  height: 371px;
+  background-color: #999;
+}
+.video-info-box .video-box .yt-vid-holder img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.video-info-box .video-box .yt-vid-holder .play-button {
+  position: relative;
+  top: -50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: center;
+  z-index: 1;
+  width: 10vh;
+  height: 10vh;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid #d1d1d1;
+  transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.video-info-box .video-box .yt-vid-holder .play-button i {
+  font-size: 4vh;
+}
+.video-info-box .video-box .yt-vid-holder .play-button:hover {
+  background-color: #E0E0E0;
+  transform: scale(1.1) translate(-45%, -45%);
+}
+.video-info-box .video-box .yt-vid-holder .play-button:active {
+  background-color: #E0E0E0;
+  transform: scale(0.9) translate(-55%, -55%);
 }
 
 #header {
@@ -47,9 +152,12 @@ body {
   width: 25%;
   height: 100%;
 }
-#header #left-header img {
+#header #left-header .logo {
   height: 70%;
   padding: 0 2vw;
+}
+#header #left-header .logo img {
+  height: 100%;
 }
 #header #navbar {
   width: 50%;
@@ -140,7 +248,7 @@ body {
   position: fixed;
   z-index: 1;
   text-align: left;
-  background-color: rgba(32, 32, 32, 0.81);
+  background-color: rgba(32, 32, 32, 0.75);
   visibility: visible;
 }
 .navmenu ul {
@@ -174,6 +282,36 @@ body {
   visibility: hidden !important;
 }
 
+#footer {
+  border-top: 0.5px solid #b9b9b9;
+}
+#footer #back-to-top {
+  position: relative;
+  left: 50%;
+  top: 1vh;
+  transform: translateX(-50%);
+  width: 5vh;
+  height: 5vh;
+  background-color: #F4F4F4;
+  color: #000;
+  outline: none;
+  border: none;
+  border-radius: 1vh;
+  cursor: pointer;
+  transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+#footer #back-to-top:hover {
+  background-color: #E0E0E0;
+  transform: scale(1.1) translateX(-45%);
+}
+#footer #back-to-top:hover i {
+  transform: scale(1.1) translateY(-25%);
+}
+#footer #back-to-top i {
+  transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  font-size: 1.5em;
+  transform: none;
+}
 #footer .footer-content {
   display: flex;
   flex-direction: row;
@@ -267,6 +405,48 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
+  .video-info-box {
+    flex-direction: column;
+  }
+  .video-info-box .info-box {
+    padding: 2vh 0;
+    text-align: center;
+    width: 100%;
+  }
+  .video-info-box .info-box .big {
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
+  }
+  .video-info-box .info-box .small {
+    margin: 0;
+    padding: 0;
+  }
+  .video-info-box .video-box {
+    width: 100%;
+    padding: 2vh 0;
+  }
+  .video-info-box .video-box .yt-vid-holder {
+    aspect-ratio: 660/371;
+    position: relative;
+    width: auto;
+    height: 56.2121212121vw;
+    box-sizing: border-box;
+  }
+  .video-info-box .video-box .yt-vid-holder img {
+    aspect-ratio: 660/371;
+    width: 100vw;
+    height: 100% !important;
+  }
+  .video-info-box .video-box .yt-vid-holder iframe {
+    width: 100%;
+    height: 100%;
+  }
+  .video-info-box .video-box .yt-vid-holder .play-button {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+  }
   .page-start .page-logo {
     left: 5%;
   }
