--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,11 @@ body {
     height: 2px;
 }
 
+.whitespace{
+    height: 40vh;
+    
+}
+
 .hidden{
     display: none;
 }
@@ -97,10 +102,12 @@ h1, h2, h3, h4{
     .video-box{
         width: fit-content;
         padding: 2vh 5vw;
+        
         .yt-vid-holder{
             width: 660px;
             height: 371px;
             background-color: #999;
+            box-shadow: 0 0 100px rgba(0, 0, 0, 0.4);
             img {
                 width: 100%;
                 height: 100%;
@@ -121,7 +128,7 @@ h1, h2, h3, h4{
                 border: 1px solid #d1d1d1;
                 i{
                     font-size: 4vh;
-
+                    transform: translateX(10%);
                 }
                 transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
                 &:hover{
@@ -145,7 +152,7 @@ h1, h2, h3, h4{
     justify-content: space-between;
     align-items: center;
     transition: all 500ms ease-in-out; 
-    background-color: rgba(32, 32, 32, 0.25);
+    background-color: rgba(32, 32, 32, 0.35);
     z-index: 2;
     #left-header{
         display: flex;
@@ -455,6 +462,7 @@ h1, h2, h3, h4{
                     aspect-ratio: 660/371;
                     width: 100vw;
                     height: 100% !important;
+                    
                 }
                 iframe{
                     width: 100%;
