--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -102,7 +102,6 @@ h1, h2, h3, h4{
     .video-box{
         width: fit-content;
         padding: 2vh 5vw;
-        
         .yt-vid-holder{
             width: 660px;
             height: 371px;
@@ -141,6 +140,16 @@ h1, h2, h3, h4{
                 }
             }
         }
+        .yt-vid-holder.hide-video{
+            &::before{
+                content: "";
+                position: absolute;
+                width: 660px;
+                height: 371px;
+                background-color: rgb(0, 0, 0);
+                z-index: 2;
+            }
+        }
     }
 }
 
@@ -153,7 +162,7 @@ h1, h2, h3, h4{
     align-items: center;
     transition: all 500ms ease-in-out; 
     background-color: rgba(32, 32, 32, 0.35);
-    z-index: 2;
+    z-index: 5;
     #left-header{
         display: flex;
         align-items: center;
@@ -234,6 +243,7 @@ h1, h2, h3, h4{
     background-color: rgba(32, 32, 32, 0.81);
     text-align: right;
     visibility: visible;
+    z-index: 5;
     li{
         margin-left: auto;
         padding: 3vh 2vh;
@@ -260,7 +270,7 @@ h1, h2, h3, h4{
     opacity: 100%;
     transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
     position: fixed;
-    z-index: 1;
+    z-index: 4;
     text-align: left;
     background-color: rgba(32, 32, 32, 0.75);
     visibility: visible;
@@ -284,6 +294,8 @@ h1, h2, h3, h4{
         }
     }
 }
+
+
 
 .navmenu-hidden{
     opacity: 0 !important;
@@ -429,6 +441,32 @@ h1, h2, h3, h4{
     color: #fff;
 }
 
+.scroll-effect {
+    opacity: 0;
+    transform: translateY(20%);
+    transition: all 500ms ease-in-out;
+}
+
+
+.yt-vid-holder.scroll-effect{
+    transform: scaleX(0);
+    transition: all 500ms cubic-bezier(0.175, 0.585, 0.32, 1.275)
+}
+.yt-vid-holder.show{
+    transform: scaleX(1) !important;
+}
+.yt-vid-holder.unhide-video{
+    &::before{
+        transform: scaleX(0);
+        transition: all 500ms cubic-bezier(0.175, 0.585, 0.32, 1.275);
+    }
+}
+
+.show{
+    opacity: 100%;
+    transform: translateY(0%);
+}
+
 // mobile devices
 @media only screen and (max-width: 1000px) {
     .video-info-box{
@@ -450,17 +488,19 @@ h1, h2, h3, h4{
         .video-box{
             width: 100%;
             padding: 2vh 0;
+            $height-calc: calc(371 / 660 * 90vw);
+            text-align: center;
             .yt-vid-holder{
                 aspect-ratio: 660/371;
+                margin: 0 auto;
                 position: relative;
                 width: auto;
-                $height-calc: calc(371 / 660 * 100vw);
                 height: $height-calc;
                 // padding-bottom: $padding-size;
                 box-sizing: border-box;
                 img{
                     aspect-ratio: 660/371;
-                    width: 100vw;
+                    width: 90vw;
                     height: 100% !important;
                     
                 }
@@ -472,6 +512,12 @@ h1, h2, h3, h4{
                     position: absolute;
                     transform: translate(-50%, -50%);
                     top: 50%;
+                }
+            }
+            .yt-vid-holder.hide-video{
+                &::before{
+                    width: 90vw;
+                    height: $height-calc;
                 }
             }
         }
