--- a/components/header.html
+++ b/components/header.html
@@ -4,10 +4,9 @@
     </div>
     <nav id="navbar">
         <ul>
-            <li><a href="#">MEP</a></li>/
+            <li><a href="/mep.html">MEP</a></li>/
             <li><a href="/bim.html">BIM</a></li>/
             <li><a href="#" id="lets-scrum-header">LET'S SCRUM</a></li>/
-            <li><a href="#">BLOG</a></li>/
             <li><a href="#" id="about-us-header">ABOUT US</a></li>/
             <li><a href="#">CONTACT</a></li>
         </ul>
@@ -19,10 +18,9 @@
 </div>
 <div id="mobile-navmenu" class="navmenu-mobile-hidden navmenu">
     <nav><ul>
-        <li><a href="#">MEP</a><div class="a-underline"></div></li>
-        <li><a href="#">BIM</a><div class="a-underline"></div></li>
+        <li><a href="/mep.html">MEP</a><div class="a-underline"></div></li>
+        <li><a href="/bim.html">BIM</a><div class="a-underline"></div></li>
         <li><a href="#">LET'S SCRUM</a><div class="a-underline"></div></li>
-        <li><a href="#">BLOG</a><div class="a-underline"></div></li>
         <li><a href="#">ABOUT US</a><div class="a-underline"></div></li>
         <!-- <li class="mobile-navbar-small"><a href="#">Memberships & Certificates</a><div class="a-underline"></div></li>
         <li class="mobile-navbar-small"><a href="#">Logo and Name</a><div class="a-underline"></div></li>
