Added lets-scrum page, fixed glitches on header, added smooth scrolling

--- a/components/header.html
+++ b/components/header.html
@@ -6,7 +6,7 @@
         <ul>
             <li><a href="/mep.html">MEP</a></li>/
             <li><a href="/bim.html">BIM</a></li>/
-            <li><a href="#" id="lets-scrum-header">LET'S SCRUM</a></li>/
+            <li><a href="/lets-scrum.html" id="lets-scrum-header">LET'S SCRUM</a></li>/
             <li><a href="#" id="about-us-header">ABOUT US</a></li>/
             <li><a href="#">CONTACT</a></li>
         </ul>
@@ -34,10 +34,10 @@
 </div>
 <div id="lets-scrum-menu" class="navmenu navmenu-hidden">
     <nav><ul>
-        <li><a href="#">Let's Scrum</a><div class="a-underline"></div></li>
-        <li><a href="#">Sketches</a><div class="a-underline"></div></li>
-        <li><a href="#">Construction Industy Acceleration</a><div class="a-underline"></div></li>
-        <li><a href="#">Producing 1000 Units per Day</a><div class="a-underline"></div></li>
+        <li><a href="/lets-scrum.html#lets-scrum">Let's Scrum</a><div class="a-underline"></div></li>
+        <li><a href="/lets-scrum.html#sketches-for-scrum">Sketches</a><div class="a-underline"></div></li>
+        <li><a href="/lets-scrum.html#acceleration-in-construction">Construction Industy Acceleration</a><div class="a-underline"></div></li>
+        <li><a href="/lets-scrum.html#10-to-1000-units">Producing 1000 Units per Day</a><div class="a-underline"></div></li>
     </ul></nav>
 </div>
 <div id="about-us-menu" class="navmenu navmenu-hidden">
