--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,18 @@ body {
     overflow-x: hidden;
 }
 
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 .divider{
     width: 100%;
     background-color: rgba(25, 181, 254, 1);
@@ -14,7 +26,10 @@ body {
 
 .whitespace{
     height: 40vh;
-    
+}
+
+.small-whitespace{
+    height: 20vh;
 }
 
 .hidden{
@@ -25,11 +40,59 @@ h1, h2, h3, h4{
     font-family: "Krona One", sans-serif;
 }
 
+p{
+    font-size: 1.1em;
+    margin-bottom: 1vh;
+}
+
+a{
+    text-decoration: underline;
+    color: #000000;
+    &:hover{
+        color: #303030;
+        text-decoration: none;
+    }
+}
+
+a.image-source{
+    text-align: center;
+    display: block;
+}
+
+.big{
+    font-size: 1.5em;
+    font-weight: 500;
+}
+
+main.long-page{
+    width: 70vw;
+    margin: 0 auto;
+}
+
 .heading-holder{
     margin: 10vh auto;
     margin-bottom: 40vh;
     text-align: center;
     width: fit-content;
+    h1{
+        font-size: 5em;
+    }
+    h2{
+        font-size: 3em;
+    }
+    p{
+        font-size: 1.5em;
+        font-weight: 500;
+    }
+}
+.heading-holder.lefty{
+    text-align: left;
+    margin-left: 0;
+    margin-right: auto;
+    margin-bottom: 10vh;
+    h1{
+        font-size: 3em;
+    }
     h2{
         font-size: 3em;
     }
@@ -148,6 +211,7 @@ h1, h2, h3, h4{
                 height: 371px;
                 background-color: rgb(0, 0, 0);
                 z-index: 2;
+                transform-origin: right;
             }
         }
     }
@@ -194,14 +258,15 @@ h1, h2, h3, h4{
             justify-content: center;
             li{          
                 padding: 0 1vw;      
-                cursor: pointer;
+                // cursor: pointer;
                 a{
                     transition: all 200ms ease-in-out; 
                     // remove a styling
                     text-decoration: none;
                     color: #c4c4c4;
                     font-size: 12px;
-                    padding-bottom: 3vh;
+                    padding: 0.5vh 0;
+
                     &:hover{
                         color: #fff;
                     }
@@ -255,6 +320,10 @@ h1, h2, h3, h4{
     }
 }
 
+ul.low-padding{
+    padding-left: 1vw;
+}
+
 .a-underline{
     width: 0;
     height: 2px;
@@ -283,7 +352,7 @@ h1, h2, h3, h4{
         li {
             padding: 1vh 1vh;
             width: fit-content;
-            cursor: pointer;
+            // cursor: pointer;
             a {
                 text-align: left;
                 transition: all 200ms ease-in-out;
@@ -441,6 +510,101 @@ h1, h2, h3, h4{
     color: #fff;
 }
 
+
+.large-image{
+    width: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
+    img{
+        width: 100%;
+        // height: auto;
+        object-fit: cover;
+        margin: 0;
+        padding: 0;
+    }
+    margin: 2vh 0;
+}
+
+.image-gallery{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    .image-holder{
+        width: 30%;
+        height: auto;
+        margin: 2vh 0;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
+// .image-info-box{
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-around;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     height: auto;
+//     .image-box{
+//         width: 47.5%;
+//         height: auto;
+//         img{
+//             width: 100%;
+//             height: 100%;
+//             object-fit: contain;
+//         }
+//     }
+//     .text-box{
+//         width: 47.5%;
+//         // height: 100%;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-between;
+//         align-items: stretch;
+//         margin: 0;
+//         padding: 0;
+//         // set height to that of parent element
+//         height: 100%;
+//     }
+// }
+
+.image-info-box {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-wrap: wrap;
+    height: auto;
+
+    .image-box {
+        width: 47.5%;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
+    .text-box {
+        width: 47.5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        font-weight: 400;
+    }
+}
+
+.bias-shadow{
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+}
+
+
 .scroll-effect {
     opacity: 0;
     transform: translateY(20%);
@@ -450,7 +614,8 @@ h1, h2, h3, h4{
 
 .yt-vid-holder.scroll-effect{
     transform: scaleX(0);
-    transition: all 500ms cubic-bezier(0.175, 0.585, 0.32, 1.275)
+    transform-origin: left;
+    transition: all 500ms ease-in-out;
 }
 .yt-vid-holder.show{
     transform: scaleX(1) !important;
@@ -458,7 +623,7 @@ h1, h2, h3, h4{
 .yt-vid-holder.unhide-video{
     &::before{
         transform: scaleX(0);
-        transition: all 500ms cubic-bezier(0.175, 0.585, 0.32, 1.275);
+        transition: all 500ms ease-in-out;
     }
 }
 
@@ -586,5 +751,41 @@ h1, h2, h3, h4{
             }
         }
     }
+
+    main.long-page{
+        width: 95vw;
+    }
+
+    .heading-holder, .heading-holder.lefty{
+        text-align: center;
+        h1{
+            font-size: 2em;
+        }
+        h2{
+            font-size: 2em;
+        }
+    }
+
+    .image-gallery{
+        .image-holder{
+            width: 100%;
+        }
+        flex-direction: column;
+    }
+
+    .image-info-box{
+        flex-direction: column;
+        .image-box{
+            width: 100%;
+        }
+        .text-box{
+            width: 100%;
+        }
+    }
+
+    ul.low-padding{
+        padding-left: 2vw;
+    }
+    
 }
 
