--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,18 @@ body {
   overflow-x: hidden;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .divider {
   width: 100%;
   background-color: rgb(25, 181, 254);
@@ -16,6 +28,10 @@ body {
   height: 40vh;
 }
 
+.small-whitespace {
+  height: 20vh;
+}
+
 .hidden {
   display: none;
 }
@@ -24,16 +40,65 @@ h1, h2, h3, h4 {
   font-family: "Krona One", sans-serif;
 }
 
+p {
+  font-size: 1.1em;
+  margin-bottom: 1vh;
+}
+
+a {
+  text-decoration: underline;
+  color: #000000;
+}
+a:hover {
+  color: #303030;
+  text-decoration: none;
+}
+
+a.image-source {
+  text-align: center;
+  display: block;
+}
+
+.big {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+main.long-page {
+  width: 70vw;
+  margin: 0 auto;
+}
+
 .heading-holder {
   margin: 10vh auto;
   margin-bottom: 40vh;
   text-align: center;
   width: fit-content;
 }
+.heading-holder h1 {
+  font-size: 5em;
+}
 .heading-holder h2 {
   font-size: 3em;
 }
 .heading-holder p {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.heading-holder.lefty {
+  text-align: left;
+  margin-left: 0;
+  margin-right: auto;
+  margin-bottom: 10vh;
+}
+.heading-holder.lefty h1 {
+  font-size: 3em;
+}
+.heading-holder.lefty h2 {
+  font-size: 3em;
+}
+.heading-holder.lefty p {
   font-size: 1.5em;
   font-weight: 500;
 }
@@ -147,6 +212,7 @@ h1, h2, h3, h4 {
   height: 371px;
   background-color: rgb(0, 0, 0);
   z-index: 2;
+  transform-origin: right;
 }
 
 #header {
@@ -193,14 +259,13 @@ h1, h2, h3, h4 {
 }
 #header #navbar ul li {
   padding: 0 1vw;
-  cursor: pointer;
 }
 #header #navbar ul li a {
   transition: all 200ms ease-in-out;
   text-decoration: none;
   color: #c4c4c4;
   font-size: 12px;
-  padding-bottom: 3vh;
+  padding: 0.5vh 0;
 }
 #header #navbar ul li a:hover {
   color: #fff;
@@ -246,6 +311,10 @@ h1, h2, h3, h4 {
   color: #979797 !important;
 }
 
+ul.low-padding {
+  padding-left: 1vw;
+}
+
 .a-underline {
   width: 0;
   height: 2px;
@@ -276,7 +345,6 @@ h1, h2, h3, h4 {
 .navmenu ul li {
   padding: 1vh 1vh;
   width: fit-content;
-  cursor: pointer;
 }
 .navmenu ul li a {
   text-align: left;
@@ -419,6 +487,65 @@ h1, h2, h3, h4 {
   color: #fff;
 }
 
+.large-image {
+  width: 100%;
+  object-fit: cover;
+  box-sizing: border-box;
+  margin: 2vh 0;
+}
+.large-image img {
+  width: 100%;
+  object-fit: cover;
+  margin: 0;
+  padding: 0;
+}
+
+.image-gallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.image-gallery .image-holder {
+  width: 30%;
+  height: auto;
+  margin: 2vh 0;
+}
+.image-gallery .image-holder img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-info-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  flex-wrap: wrap;
+  height: auto;
+}
+.image-info-box .image-box {
+  width: 47.5%;
+}
+.image-info-box .image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.image-info-box .text-box {
+  width: 47.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-weight: 400;
+}
+
+.bias-shadow {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+  box-sizing: border-box;
+}
+
 .scroll-effect {
   opacity: 0;
   transform: translateY(20%);
@@ -427,7 +554,8 @@ h1, h2, h3, h4 {
 
 .yt-vid-holder.scroll-effect {
   transform: scaleX(0);
-  transition: all 500ms cubic-bezier(0.175, 0.585, 0.32, 1.275);
+  transform-origin: left;
+  transition: all 500ms ease-in-out;
 }
 
 .yt-vid-holder.show {
@@ -436,7 +564,7 @@ h1, h2, h3, h4 {
 
 .yt-vid-holder.unhide-video::before {
   transform: scaleX(0);
-  transition: all 500ms cubic-bezier(0.175, 0.585, 0.32, 1.275);
+  transition: all 500ms ease-in-out;
 }
 
 .show {
@@ -547,5 +675,35 @@ h1, h2, h3, h4 {
   #footer .footer-content .imprint .social-media {
     margin-top: 2vh;
     justify-content: space-around;
+  }
+  main.long-page {
+    width: 95vw;
+  }
+  .heading-holder, .heading-holder.lefty {
+    text-align: center;
+  }
+  .heading-holder h1, .heading-holder.lefty h1 {
+    font-size: 2em;
+  }
+  .heading-holder h2, .heading-holder.lefty h2 {
+    font-size: 2em;
+  }
+  .image-gallery {
+    flex-direction: column;
+  }
+  .image-gallery .image-holder {
+    width: 100%;
+  }
+  .image-info-box {
+    flex-direction: column;
+  }
+  .image-info-box .image-box {
+    width: 100%;
+  }
+  .image-info-box .text-box {
+    width: 100%;
+  }
+  ul.low-padding {
+    padding-left: 2vw;
   }
 }/*# sourceMappingURL=styles.css.map */
