--- a/components/header.html
+++ b/components/header.html
@@ -7,7 +7,7 @@
             <li><a href="/mep.html">MEP</a></li>/
             <li><a href="/bim.html">BIM</a></li>/
             <li><a href="/lets-scrum.html" id="lets-scrum-header">LET'S SCRUM</a></li>/
-            <li><a href="#" id="about-us-header">ABOUT US</a></li>/
+            <li><a href="/about-us.html" id="about-us-header">ABOUT US</a></li>/
             <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
@@ -20,8 +20,8 @@
     <nav><ul>
         <li><a href="/mep.html">MEP</a><div class="a-underline"></div></li>
         <li><a href="/bim.html">BIM</a><div class="a-underline"></div></li>
-        <li><a href="#">LET'S SCRUM</a><div class="a-underline"></div></li>
-        <li><a href="#">ABOUT US</a><div class="a-underline"></div></li>
+        <li><a href="/lets-scrum.html">LET'S SCRUM</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html">ABOUT US</a><div class="a-underline"></div></li>
         <!-- <li class="mobile-navbar-small"><a href="#">Memberships & Certificates</a><div class="a-underline"></div></li>
         <li class="mobile-navbar-small"><a href="#">Logo and Name</a><div class="a-underline"></div></li>
         <li class="mobile-navbar-small"><a href="#">Services</a><div class="a-underline"></div></li>
