--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
     overflow-x: hidden;
 }
 
@@ -129,13 +130,40 @@ main.long-page{
             color: #fff;
             font-size: 10em;
             margin: 0;
+            margin-bottom: 0.5vw;
         }
         h2{
             font-family: "Krona One", sans-serif;
             color: #fff;
             font-size: 2em;
             margin: 0;
+            margin-bottom: 0.5vw;
             margin-left: 0.8vw;
+        }
+        .h1-desc{
+            font-family: "Krona One", sans-serif;
+            color: #fff;
+            font-size: 2em;
+            margin: 0;
+            margin-left: 0.8vw;
+            margin-bottom: 0.5vw;
+            background-color: #000;
+        }
+    }
+    .page-logo.long{
+        width: 70vw;
+        top: 25%;
+    }
+    .page-logo.black{
+        h1{
+            color: #000;
+        }
+        h2{
+            color: #000;
+        }
+        .h1-desc{
+            color: #000;
+            background-color: rgba(255, 255, 255, 0.4);
         }
     }
 }
@@ -266,6 +294,7 @@ main.long-page{
                     color: #c4c4c4;
                     font-size: 12px;
                     padding: 0.5vh 0;
+                    padding-bottom: 3vh;
 
                     &:hover{
                         color: #fff;
@@ -322,6 +351,12 @@ main.long-page{
 
 ul.low-padding{
     padding-left: 1vw;
+}
+
+ul.more-v-padding{
+    li{
+        padding-bottom: 2vh;
+    }
 }
 
 .a-underline{
@@ -541,37 +576,19 @@ ul.low-padding{
             object-fit: cover;
         }
     }
+    &.certs{
+        .image-holder{
+            width: 25%;
+            aspect-ratio: 30/5;
+            height: auto;
+            background-color: #fff;
+            margin: 4vh;
+            img{
+                object-fit: contain;
+            }
+        }
+    }
 }
-
-// .image-info-box{
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-around;
-//     align-items: center;
-//     flex-wrap: wrap;
-//     height: auto;
-//     .image-box{
-//         width: 47.5%;
-//         height: auto;
-//         img{
-//             width: 100%;
-//             height: 100%;
-//             object-fit: contain;
-//         }
-//     }
-//     .text-box{
-//         width: 47.5%;
-//         // height: 100%;
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: space-between;
-//         align-items: stretch;
-//         margin: 0;
-//         padding: 0;
-//         // set height to that of parent element
-//         height: 100%;
-//     }
-// }
 
 .image-info-box {
     display: flex;
@@ -582,7 +599,23 @@ ul.low-padding{
 
     .image-box {
         width: 47.5%;
-
+        height: fit-content;
+        &.multiple{
+            .image-box-child{
+                margin: 2vh 0;
+                &.square-small{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    img{
+                        aspect-ratio: 1/1;
+                        width: 30%;
+                        height: auto;
+                        margin: 0 auto;
+                    }
+                }
+            }
+        }
         img {
             width: 100%;
             height: 100%;
@@ -604,13 +637,103 @@ ul.low-padding{
     box-sizing: border-box;
 }
 
+.largeable-image{
+    position: relative;
+    transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.1);
+        z-index: 3;
+    }
+    &:active{
+        transform: scale(1);
+    }
+    z-index: inherit;
+}
+
+.grid {
+    &.horizontal {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: flex-start;
+      
+      
+    }
+    // Loop through the .of-N classes from 2 to 10
+    @for $i from 2 through 10 {
+        &.of-#{$i} {
+          .grid-half {
+            width: calc(90% / #{$i});
+          }
+        }
+    }
+}
+
+.staff{
+    img{
+        aspect-ratio: 1/1;
+        width: 100%;
+        height: auto;
+    }
+    .staff-name{
+        font-size: 1.1em;
+        font-weight: 600;
+    }
+    .staff-title{
+        font-size: 0.8em;
+        font-weight: 500;
+        color: #72B0E1;
+    }
+}
+
+.founder-info {
+    img {
+      width: 319px;
+      height: 423px;
+      &.alignleft {
+        float: left;
+        margin-right: 20px;
+      }
+    }
+  
+    p {
+      margin-bottom: 20px;
+    }
+}
+
+.loading-bar{
+    $my-height: var(--my-height);
+    $my-percentage: var(--my-percentage);
+    width: 100%;
+    height: $my-height;
+    background-color: #DDDDDD;
+    border-radius: calc($my-height / 2);
+    .loading-bar-child{
+        background-color: #0070C9;
+        height: 100%;
+        width: $my-percentage;
+        border-radius: calc($my-height / 2);
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: flex-end;
+        p{
+            text-align: right;
+            padding-right: 1vw;
+            font-size: calc($my-height * 0.75);
+            margin: 0;
+            color: #fff;
+            font-weight: 600;
+        }
+    }
+}
 
 .scroll-effect {
     opacity: 0;
     transform: translateY(20%);
     transition: all 500ms ease-in-out;
 }
-
 
 .yt-vid-holder.scroll-effect{
     transform: scaleX(0);
@@ -630,6 +753,56 @@ ul.low-padding{
 .show{
     opacity: 100%;
     transform: translateY(0%);
+}
+
+.larged-image{
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    background-color: rgba(0, 0, 0, 0.4);
+
+    // transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+
+    transform: scale(0.9);
+    opacity: 0;
+    // z-index: -1;
+    z-index: 10;
+    visibility: hidden;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        margin: 0 auto;
+    }
+
+    button{
+        position: absolute;
+        top: 2vh;
+        right: 2vh;
+        background-color: transparent;
+        border: none;
+        color: #fff;
+        font-size: 2em;
+        cursor: pointer;
+        transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        &:hover{
+            transform: scale(1.1);
+        }
+        &:active{
+            transform: scale(0.9);
+        }
+    }
+
+    &.show{
+        opacity: 100%;
+        z-index: 10;
+        visibility: visible;
+        transform: scale(1);
+    }
 }
 
 // mobile devices
@@ -692,6 +865,7 @@ ul.low-padding{
         .page-logo {
             left: 5%;
         }
+
     }
     #header{
         #navbar{
@@ -787,5 +961,35 @@ ul.low-padding{
         padding-left: 2vw;
     }
     
+    .founder-info{
+        .img-wrapper{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        img{
+            width: 90vw;
+            height: auto;
+            margin: 0 auto;
+            padding: 0;
+            padding: 0;
+            &.alignleft{
+                float: none;
+                margin: 0;
+            }
+        }
+    }
+
+    .heading-holder.lefty{
+        width: 90vw;
+        margin: 0 auto;
+    }
+
+    .grid.horizontal{
+        flex-direction: column;
+        .grid-half{
+            width: 100%;
+        }
+    }
 }
 
