Finished about us page, updated header and footer links

--- a/components/header.html
+++ b/components/header.html
@@ -42,14 +42,14 @@
 </div>
 <div id="about-us-menu" class="navmenu navmenu-hidden">
     <nav><ul>
-        <li><a href="#">About Us</a><div class="a-underline"></div></li>
-        <li><a href="#">Memberships & Certificates</a><div class="a-underline"></div></li>
-        <li><a href="#">Logo and Name</a><div class="a-underline"></div></li>
-        <li><a href="#">Services</a><div class="a-underline"></div></li>
-        <li><a href="#">Founder</a><div class="a-underline"></div></li>
-        <li><a href="#">Team</a><div class="a-underline"></div></li>
-        <li><a href="#">Careers</a><div class="a-underline"></div></li>
-        <li><a href="#">Imprint</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#about-us">About Us</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#memberships-and-tools">Memberships & Certificates</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#logo-meaning">Logo and Name</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#services">Services</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#founder">Founder</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#staff">Team</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#careers">Careers</a><div class="a-underline"></div></li>
+        <li><a href="/about-us.html#imprint">Imprint</a><div class="a-underline"></div></li>
     </ul></nav>    
 </div>
 <script src="/scripts/header.js"></script>
