--- a/components/footer.html
+++ b/components/footer.html
@@ -4,27 +4,26 @@
         <div class="navigation">
             <span class="title">NAVIGATION</span>
             <ul>
-                <li><a href="#" class="footer-link">MEP</a></li>
-                <li><a href="#" class="footer-link">BIM</a></li>
-                <li><a href="#" class="footer-link">LET'S SCRUM</a></li>
-                <li><a href="#" class="footer-link">BLOG</a></li>
-                <li><a href="#" class="footer-link">ABOUT US</a></li>
-                <li><a href="#" class="footer-link">CONTACT</a></li>
+                <li><a href="/mep.html" class="footer-link">MEP</a></li>
+                <li><a href="/bim.html" class="footer-link">BIM</a></li>
+                <li><a href="/lets-scrum.html" class="footer-link">LET'S SCRUM</a></li>
+                <li><a href="/about-us.html" class="footer-link">ABOUT US</a></li>
+                <li><a href="#" class="footer-link">CONTACT</a></li> <!-- Update this when you have a contact page -->
             </ul>
-        </div>
+        </div>        
         <div class="about-us">
             <span class="title">ABOUT US</span>
             <ul>
-                <li><a href="#" class="footer-link">About Us</a></li>
-                <li><a href="#" class="footer-link">Memberships & Certificates</a></li>
-                <li><a href="#" class="footer-link">Logo and Name</a></li>
-                <li><a href="#" class="footer-link">Services</a></li>
-                <li><a href="#" class="footer-link">Founder</a></li>
-                <li><a href="#" class="footer-link">Team</a></li>
-                <li><a href="#" class="footer-link">Careers</a></li>
-                <li><a href="#" class="footer-link">Imprint</a></li>
+                <li><a href="/about-us.html#about-us" class="footer-link">About Us</a></li>
+                <li><a href="/about-us.html#memberships-and-tools" class="footer-link">Memberships & Certificates</a></li>
+                <li><a href="/about-us.html#logo-meaning" class="footer-link">Logo and Name</a></li>
+                <li><a href="/about-us.html#services" class="footer-link">Services</a></li>
+                <li><a href="/about-us.html#founder" class="footer-link">Founder</a></li>
+                <li><a href="/about-us.html#staff" class="footer-link">Team</a></li>
+                <li><a href="/about-us.html#careers" class="footer-link">Careers</a></li>
+                <li><a href="/about-us.html#imprint" class="footer-link">Imprint</a></li>
             </ul>
-        </div>
+        </div>        
         <div class="decorative-image">
             <img src="/images/bimmade.png" alt="Decorative MEP Background" />
         </div>
@@ -50,7 +49,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <span class="copyright">ALL RIGHTS RESERVED © 2000 - 2023 SIMPASE</span>
+        <span class="copyright">ALL RIGHTS RESERVED © 2000 - 2023 SIMPHASE</span>
     </div>
 </div>
 <script>
