--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -642,7 +642,7 @@ ul.more-v-padding{
     transition: all 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     &:hover{
         cursor: pointer;
-        transform: scale(1.1);
+        transform: scale(1.02);
         z-index: 3;
     }
     &:active{
@@ -740,12 +740,13 @@ ul.more-v-padding{
     .loading-bar-child{
         background-color: #0070C9;
         height: 100%;
-        width: $my-percentage;
+        width: 10%;
         border-radius: calc($my-height / 2);
         display: flex;
         align-items: center;
         flex-direction: row;
         justify-content: flex-end;
+        transition: all 1000ms ease-in-out;
         p{
             text-align: right;
             padding-right: 1vw;
@@ -753,6 +754,11 @@ ul.more-v-padding{
             margin: 0;
             color: #fff;
             font-weight: 600;
+        }
+    }
+    &.show{
+        .loading-bar-child{
+            width: $my-percentage;
         }
     }
 }
@@ -892,8 +898,11 @@ ul.more-v-padding{
     .page-start{
         .page-logo {
             left: 5%;
+            max-width: 80vw;
         }
-
+        h1{
+            font-size: 4em !important;
+        }
     }
     #header{
         #navbar{
@@ -973,7 +982,17 @@ ul.more-v-padding{
             width: 100%;
         }
         flex-direction: column;
+        &.certs{
+            .image-holder{
+                width: 100%;
+                margin-left: 0;
+                margin-right: 0;
+            }
+            flex-direction: column;
+        }
     }
+
+    
 
     .image-info-box{
         flex-direction: column;
