Made footer more responsive, finishing touches

--- a/components/footer.html
+++ b/components/footer.html
@@ -8,7 +8,7 @@
                 <li><a href="/bim.html" class="footer-link">BIM</a></li>
                 <li><a href="/lets-scrum.html" class="footer-link">LET'S SCRUM</a></li>
                 <li><a href="/about-us.html" class="footer-link">ABOUT US</a></li>
-                <li><a href="#" class="footer-link">CONTACT</a></li> <!-- Update this when you have a contact page -->
+                <!-- <li><a href="#" class="footer-link">CONTACT</a></li> -->
             </ul>
         </div>        
         <div class="about-us">
