--- a/components/header.html
+++ b/components/header.html
@@ -7,8 +7,8 @@
             <li><a href="/mep.html">MEP</a></li>/
             <li><a href="/bim.html">BIM</a></li>/
             <li><a href="/lets-scrum.html" id="lets-scrum-header">LET'S SCRUM</a></li>/
-            <li><a href="/about-us.html" id="about-us-header">ABOUT US</a></li>/
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="/about-us.html" id="about-us-header">ABOUT US</a></li>
+            <!-- <li><a href="#">CONTACT</a></li> -->
         </ul>
     </nav>
     <div id="right-header">
@@ -22,14 +22,7 @@
         <li><a href="/bim.html">BIM</a><div class="a-underline"></div></li>
         <li><a href="/lets-scrum.html">LET'S SCRUM</a><div class="a-underline"></div></li>
         <li><a href="/about-us.html">ABOUT US</a><div class="a-underline"></div></li>
-        <!-- <li class="mobile-navbar-small"><a href="#">Memberships & Certificates</a><div class="a-underline"></div></li>
-        <li class="mobile-navbar-small"><a href="#">Logo and Name</a><div class="a-underline"></div></li>
-        <li class="mobile-navbar-small"><a href="#">Services</a><div class="a-underline"></div></li>
-        <li class="mobile-navbar-small"><a href="#">Founder</a><div class="a-underline"></div></li>
-        <li class="mobile-navbar-small"><a href="#">Team</a><div class="a-underline"></div></li>
-        <li class="mobile-navbar-small"><a href="#">Careers</a><div class="a-underline"></div></li>
-        <li class="mobile-navbar-small"><a href="#">Imprint</a><div class="a-underline"></div></li> -->
-        <li><a href="#">CONTACT</a><div class="a-underline"></div></li>
+        <!-- <li><a href="#">CONTACT</a><div class="a-underline"></div></li> -->
     </ul></nav>
 </div>
 <div id="lets-scrum-menu" class="navmenu navmenu-hidden">
