Still changing file system

--- a/components/footer.html
+++ b/components/footer.html
@@ -4,32 +4,32 @@
         <div class="navigation">
             <span class="title">NAVIGATION</span>
             <ul>
-                <li><a href="/mep.html" class="footer-link">MEP</a></li>
-                <li><a href="/bim.html" class="footer-link">BIM</a></li>
-                <li><a href="/lets-scrum.html" class="footer-link">LET'S SCRUM</a></li>
-                <li><a href="/about-us.html" class="footer-link">ABOUT US</a></li>
+                <li><a href="mep.html" class="footer-link">MEP</a></li>
+                <li><a href="bim.html" class="footer-link">BIM</a></li>
+                <li><a href="lets-scrum.html" class="footer-link">LET'S SCRUM</a></li>
+                <li><a href="about-us.html" class="footer-link">ABOUT US</a></li>
                 <!-- <li><a href="#" class="footer-link">CONTACT</a></li> -->
             </ul>
         </div>        
         <div class="about-us">
             <span class="title">ABOUT US</span>
             <ul>
-                <li><a href="/about-us.html#about-us" class="footer-link">About Us</a></li>
-                <li><a href="/about-us.html#memberships-and-tools" class="footer-link">Memberships & Certificates</a></li>
-                <li><a href="/about-us.html#logo-meaning" class="footer-link">Logo and Name</a></li>
-                <li><a href="/about-us.html#services" class="footer-link">Services</a></li>
-                <li><a href="/about-us.html#founder" class="footer-link">Founder</a></li>
-                <li><a href="/about-us.html#staff" class="footer-link">Team</a></li>
-                <li><a href="/about-us.html#careers" class="footer-link">Careers</a></li>
-                <li><a href="/about-us.html#imprint" class="footer-link">Imprint</a></li>
+                <li><a href="about-us.html#about-us" class="footer-link">About Us</a></li>
+                <li><a href="about-us.html#memberships-and-tools" class="footer-link">Memberships & Certificates</a></li>
+                <li><a href="about-us.html#logo-meaning" class="footer-link">Logo and Name</a></li>
+                <li><a href="about-us.html#services" class="footer-link">Services</a></li>
+                <li><a href="about-us.html#founder" class="footer-link">Founder</a></li>
+                <li><a href="about-us.html#staff" class="footer-link">Team</a></li>
+                <li><a href="about-us.html#careers" class="footer-link">Careers</a></li>
+                <li><a href="about-us.html#imprint" class="footer-link">Imprint</a></li>
             </ul>
         </div>        
         <div class="decorative-image">
-            <img src="/images/bimmade.png" alt="Decorative MEP Background" />
+            <img src="images/bimmade.png" alt="Decorative MEP Background" />
         </div>
         <div class="imprint">
             <div class="logowrapper">
-            <img class="logo" src="/images/simphase-transparentbg-black.png" alt="SIMPHASE Logo" />
+            <img class="logo" src="images/simphase-transparentbg-black.png" alt="SIMPHASE Logo" />
             </div>
             <ul>
             <li class="map-logo"><a href="https://www.google.com/maps/place/52%C2%B031'14.5%22N+13%C2%B019'40.0%22E/@52.5205505,13.3277636,16.75z/data=!4m4!3m3!8m2!3d52.5206944!4d13.3277778?hl=de" target="_blank" class="address footer-link"><span>Simphase Engineering GmbH <br/>
