--- a/components/header.html
+++ b/components/header.html
@@ -1,13 +1,13 @@
 <div id="header">
     <div id="left-header">
-        <a href="/index.html" class="logo"><img src="/images/simphase-transparentbg-white.png" alt="Simphase Logo" /></a>
+        <a href="index.html" class="logo"><img src="images/simphase-transparentbg-white.png" alt="Simphase Logo" /></a>
     </div>
     <nav id="navbar">
         <ul>
-            <li><a href="/mep.html">MEP</a></li>/
-            <li><a href="/bim.html">BIM</a></li>/
-            <li><a href="/lets-scrum.html" id="lets-scrum-header">LET'S SCRUM</a></li>/
-            <li><a href="/about-us.html" id="about-us-header">ABOUT US</a></li>
+            <li><a href="mep.html">MEP</a></li>/
+            <li><a href="bim.html">BIM</a></li>/
+            <li><a href="lets-scrum.html" id="lets-scrum-header">LET'S SCRUM</a></li>/
+            <li><a href="about-us.html" id="about-us-header">ABOUT US</a></li>
             <!-- <li><a href="#">CONTACT</a></li> -->
         </ul>
     </nav>
@@ -18,31 +18,31 @@
 </div>
 <div id="mobile-navmenu" class="navmenu-mobile-hidden navmenu">
     <nav><ul>
-        <li><a href="/mep.html">MEP</a><div class="a-underline"></div></li>
-        <li><a href="/bim.html">BIM</a><div class="a-underline"></div></li>
-        <li><a href="/lets-scrum.html">LET'S SCRUM</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html">ABOUT US</a><div class="a-underline"></div></li>
+        <li><a href="mep.html">MEP</a><div class="a-underline"></div></li>
+        <li><a href="bim.html">BIM</a><div class="a-underline"></div></li>
+        <li><a href="lets-scrum.html">LET'S SCRUM</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html">ABOUT US</a><div class="a-underline"></div></li>
         <!-- <li><a href="#">CONTACT</a><div class="a-underline"></div></li> -->
     </ul></nav>
 </div>
 <div id="lets-scrum-menu" class="navmenu navmenu-hidden">
     <nav><ul>
-        <li><a href="/lets-scrum.html#lets-scrum">Let's Scrum</a><div class="a-underline"></div></li>
-        <li><a href="/lets-scrum.html#sketches-for-scrum">Sketches</a><div class="a-underline"></div></li>
-        <li><a href="/lets-scrum.html#acceleration-in-construction">Construction Industy Acceleration</a><div class="a-underline"></div></li>
-        <li><a href="/lets-scrum.html#10-to-1000-units">Producing 1000 Units per Day</a><div class="a-underline"></div></li>
+        <li><a href="lets-scrum.html#lets-scrum">Let's Scrum</a><div class="a-underline"></div></li>
+        <li><a href="lets-scrum.html#sketches-for-scrum">Sketches</a><div class="a-underline"></div></li>
+        <li><a href="lets-scrum.html#acceleration-in-construction">Construction Industy Acceleration</a><div class="a-underline"></div></li>
+        <li><a href="lets-scrum.html#10-to-1000-units">Producing 1000 Units per Day</a><div class="a-underline"></div></li>
     </ul></nav>
 </div>
 <div id="about-us-menu" class="navmenu navmenu-hidden">
     <nav><ul>
-        <li><a href="/about-us.html#about-us">About Us</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#memberships-and-tools">Memberships & Certificates</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#logo-meaning">Logo and Name</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#services">Services</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#founder">Founder</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#staff">Team</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#careers">Careers</a><div class="a-underline"></div></li>
-        <li><a href="/about-us.html#imprint">Imprint</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#about-us">About Us</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#memberships-and-tools">Memberships & Certificates</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#logo-meaning">Logo and Name</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#services">Services</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#founder">Founder</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#staff">Team</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#careers">Careers</a><div class="a-underline"></div></li>
+        <li><a href="about-us.html#imprint">Imprint</a><div class="a-underline"></div></li>
     </ul></nav>    
 </div>
-<script src="/scripts/header.js"></script>
+<script src="scripts/header.js"></script>
