Changed social media links

--- a/components/footer.html
+++ b/components/footer.html
@@ -36,15 +36,15 @@
                 c/o Next Level Offices, <br/>
                 Franklinstraße 11, <br/>
                 10587 Berlin</span></a></li>
-            <li class="mail-logo"><a href="https://preview.additionalram.com/social-media-test" target="_blank" class="email footer-link">
+            <li class="mail-logo"><a href="https://additionalram.com/social-media-preview/" target="_blank" class="email footer-link">
                 info@simphase.eu
             </a></li>
             </ul>
             <div class="footer social-media">
-                <a href="https://preview.additionalram.com/social-media-test" class="sm-icon"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://preview.additionalram.com/social-media-test" class="sm-icon"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://preview.additionalram.com/social-media-test" class="sm-icon"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://preview.additionalram.com/social-media-test" class="sm-icon"><i class="fa-brands fa-xing"></i></a>
+                <a href="https://additionalram.com/social-media-preview/" class="sm-icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://additionalram.com/social-media-preview/" class="sm-icon"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://additionalram.com/social-media-preview/" class="sm-icon"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://additionalram.com/social-media-preview/" class="sm-icon"><i class="fa-brands fa-xing"></i></a>
             </div>
         </div>
     </div>
