Responsibility changes and file management Hopefully fixed this time

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -675,7 +675,7 @@ ul.more-v-padding{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // height: fit-content;
+    height: fit-content;
 
     .staff-info{
         img{
